--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,137 @@
-rasterio>=1.3.4
-gdown>=4.6.0
-opencv-python>=4.7.0.68
-einops>=0.6.0
-timm>=0.4.12 
+affine==2.3.0
+anyio==4.2.0
+arrow==1.2.3
+attrs==23.2.0
+backoff==2.2.1
+beautifulsoup4==4.12.2
+blessed==1.20.0
+boto3==1.29.1
+botocore==1.32.1
+bravado==11.0.3
+bravado-core==6.1.1
+Brotli==1.0.9
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==2.0.4
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+croniter==1.3.7
+dateutils==0.6.12
+deepdiff==6.7.1
+efficientnet-pytorch==0.7.1
+fastapi==0.103.0
+filelock==3.13.1
+fqdn==1.5.1
+fsspec==2023.10.0
+future==1.0.0
+gitdb==4.0.11
+GitPython==3.1.42
+gmpy2==2.1.2
+h11==0.14.0
+huggingface-hub==0.21.4
+idna==3.4
+imagecodecs==2023.1.23
+imageio==2.33.1
+inquirer==3.1.4
+isoduration==20.11.0
+itsdangerous==2.0.1
+Jinja2==3.1.3
+jmespath==1.0.1
+jsonpointer==2.4
+jsonref==1.1.0
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+lazy_loader==0.3
+lightning==2.0.9.post0
+lightning-cloud==0.5.57
+lightning-utilities==0.9.0
+markdown-it-py==2.2.0
+MarkupSafe==2.1.3
+mdurl==0.1.0
+mkl-service==2.4.0
+monotonic==1.6
+mpmath==1.3.0
+msgpack==1.0.8
+munch==4.0.0
+neptune==1.9.1
+networkx==3.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
+ordered-set==4.1.0
+orjson==3.9.10
+packaging==23.1
+pandas==2.2.1
+patchify==0.2.3
+Pillow==9.4.0
+pip==23.3.1
+pretrainedmodels==0.7.4
+psutil==5.9.0
+pycparser==2.21
+pydantic==1.10.12
+Pygments==2.15.1
+PyJWT==2.4.0
+pyparsing==3.0.9
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-editor==1.0.4
+python-multipart==0.0.6
+pytorch-lightning==2.0.3
+pytz==2023.3.post1
+PyYAML==6.0.1
+rasterio==1.2.10
+readchar==4.0.5
+referencing==0.33.0
+requests==2.31.0
+requests-oauthlib==1.4.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.3.5
+rpds-py==0.18.0
+s3transfer==0.7.0
+safetensors==0.4.2
+scikit-image==0.22.0
+scipy==1.11.4
+segmentation-models-pytorch==0.3.3
+setuptools==68.2.2
+simplejson==3.19.2
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+snuggs==1.4.7
+soupsieve==2.5
+starlette==0.27.0
+starsessions==1.3.0
+swagger-spec-validator==3.0.3
+sympy==1.12
+tifffile==2023.4.12
+timm==0.9.2
+torch==2.2.1
+torchmetrics==1.1.2
+torchvision==0.15.2a0
+tqdm==4.65.0
+traitlets==5.7.1
+triton==2.2.0
+typing_extensions==4.9.0
+tzdata==2024.1
+uri-template==1.3.0
+urllib3==2.0.7
+uvicorn==0.20.0
+wcwidth==0.2.5
+webcolors==1.13
+websocket-client==0.58.0
+websockets==10.4
+wheel==0.41.2
